<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context=".TopMenuActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp" app:srcCompat="@drawable/topimage" android:id="@+id/imageView2"
                android:scaleType="fitXY" />


        <Button
                android:text="広告エリア"
                android:layout_width="match_parent"
                android:layout_height="71dp" android:id="@+id/affiliate"/>
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2">

            <Button
                    android:id="@+id/airport"
                    android:layout_width="195dp"
                    android:layout_height="170dp"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_row="0"
                    android:text="@string/airportButton"/>

            <Button
                    android:id="@+id/flightinfo"
                    android:layout_width="300dp"
                    android:layout_height="170dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_row="0"
                    android:text="@string/flightButton"/>
            <Button
                    android:id="@+id/sightseeing"
                    android:layout_width="300dp"
                    android:layout_height="170dp"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_row="1"
                    android:text="@string/sightseeingButton"/>

            <Button
                    android:id="@+id/taxi"
                    android:layout_width="300dp"
                    android:layout_height="170dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_row="1"
                    android:text="@string/taxiButton"/>

        </GridLayout>

    </LinearLayout>
</ScrollView>
