<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#cfd"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              tools:context=".MainActivity">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#00f"
            android:layout_marginTop="100dp"
            android:textSize="24sp" android:textStyle="bold"
            android:textAlignment="viewStart" android:textAllCaps="true" android:text="@string/text_select_label"/>

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#fff"/>
    <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content" android:id="@+id/chooseButtun"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/chooseButtun" android:background="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
    <Button
            android:text="@string/allButtun"
            android:layout_width="283dp"
            android:layout_height="wrap_content" android:id="@+id/button2"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:background="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button"/>
</LinearLayout>